tests/rosetta/out/C/csv-to-html-translation-1.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:59:38Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:59:38Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
int _mochi_main() {
  char *tmp1 =
      concat_string("Character,Speech\n",
                    "The multitude,The messiah! Show us the messiah!\n");
  char *tmp2 = concat_string(
      tmp1, "Brians mother,<angry>Now you listen here! He's not the messiah; "
            "he's a very naughty boy! Now go away!</angry>\n");
  char *tmp3 = concat_string(tmp2, "The multitude,Who are you?\n");
  char *tmp4 =
      concat_string(tmp3, "Brians mother,I'm his mother; that's who!\n");
  char *tmp5 = concat_string(
      tmp4, "The multitude,Behold his mother! Behold his mother!");
  char *c = tmp5;
  for (int tmp6 = 0; tmp6 < split(c, "\n").len; tmp6++) {
    char *line = split(c, "\n").data[tmp6];
    rows = 0;
  }
  printf("<table>\n");
  for (int tmp7 = 0; tmp7 < rows.len; tmp7++) {
    list_string row = rows.data[tmp7];
    char *cells = "";
    for (int tmp8 = 0; tmp8 < row.len; tmp8++) {
      char *cell = row.data[tmp8];
      char *tmp9 = concat_string(cells, "<td>");
      char *tmp10 = concat_string(tmp9, cell);
      char *tmp11 = concat_string(tmp10, "</td>");
      cells = tmp11;
    }
    char *tmp12 = concat_string("    <tr>", cells);
    char *tmp13 = concat_string(tmp12, "</tr>");
    printf("%s\n", tmp13);
  }
  printf("</table>\n");
  return 0;
}
int main() { return _mochi_main(); }
